--- a/tabs_and_graphs.css
+++ b/tabs_and_graphs.css
@@ -1,14 +1,6 @@
-.sim-btns-hide {
-    display: none;
-}
-.hidden {
-    display: none;
-}
-
 .tab {
     overflow: hidden;
-    width: 526px;
-    /* border: 1px, solid, #ccc; */
+    border: 1px, solid, #ccc;
     background-color: #f1f1f1;
 }
 
@@ -33,8 +25,6 @@
 .tabcontent {
     display: none;
     padding: 6px 12px;
-    width: 500px;
-    height: 400px;
     border: 1px solid #ccc;
     border-top: none;
 }
