--- a/simulation.css
+++ b/simulation.css
@@ -1,3 +1,133 @@
+body {
+    background-color: #f6f5f3;
+}
+
+li {
+    list-style-type: none;
+}
+
+/* title */
+.title-div {
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
+}
+
+.title-one {
+    color: #74D14C;
+}
+
+.title-two {
+    color: #4C96D7;
+}
+
+/* display and info container */
+.main-container {
+    display: flex;
+    justify-content: space-evenly;
+}
+
+/* main display */
+.timer {
+    font-size: 50px;
+    text-align: center;
+    color: #4C96D7;
+}
+
+.face-image {
+    position: relative;
+    width: 640px;
+    height: 480px;
+}
+
+.diff-btns {
+    margin-top: 10px;
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.diff-btns button {
+    padding: 5px;
+    margin: 15px;
+    cursor: pointer;
+    border-radius: 4px;
+    font-size: 15px;
+    color: #f6f5f3;
+    transition: 0.3s;
+}
+.diff-btns button:focus {
+    outline: none;
+}
+
+.sim-btns {
+    margin-top: 10px;
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.sim-btns button {
+    padding: 5px;
+    margin: 15px;
+    cursor: pointer;
+    border-radius: 4px;
+    font-size: 15px;
+    color: #f6f5f3;
+    transition: 0.3s;
+}
+.sim-btns button:focus {
+    outline: none;
+}
+
+.answers {
+    display: flex;
+    justify-content: center;
+}
+
+.instructions {
+    width: 600px;
+}
+
+
+.extra-info {
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 30px;
+}
+.info-buttons {
+    width: 600px;
+}
+
+.info-buttons button {
+    padding: 5px;
+    margin-left: 15px;
+    cursor: pointer;
+    border-radius: 4px;
+    font-size: 15px;
+    color: #f6f5f3;
+    transition: 0.3s;
+}
+.info-buttons button:focus {
+    outline: none;
+}
+
+.green {
+    background-color: #74D14C;
+}
+.green:hover {
+    background-color: #4C96D7;
+}
+
+.blue {
+    background-color: #4C96D7;
+}
+.blue:hover {
+    background-color: #74D14C;
+}
+
+.graphs {
+    width: 640px;
+    /* height: 455px; */
+}
 .sim-btns-hide {
     display: none;
 }
@@ -5,29 +135,27 @@
     display: none;
 }
 
+
+/* graph tabs */
+.graph-title {
+    display: flex;
+    justify-content: center;
+}
+
 .tab {
     overflow: hidden;
     width: 526px;
-    /* border: 1px, solid, #ccc; */
     background-color: #f1f1f1;
 }
 
 .tab button {
-    background-color: inherit;
     float: left;
     border: none;
     outline: none;
     cursor: pointer;
     padding: 14px 16px;
+    color: #f6f5f3;
     transition: 0.3s;
-}
-
-.tab button:hover {
-    background-color: #ddd;
-}
-
-.tab button.active {
-    background-color: #ddd;
 }
 
 .tabcontent {
@@ -35,6 +163,5 @@
     padding: 6px 12px;
     width: 500px;
     height: 400px;
-    border: 1px solid #ccc;
     border-top: none;
 }
