--- a/simulation.css
+++ b/simulation.css
@@ -1,3 +1,7 @@
+title, link, div, h1, div, button, h2, span, p {
+    font-family: Verdana, sans-serif
+}
+
 body {
     background-color: #f6f5f3;
 }
@@ -94,7 +98,12 @@ li {
     margin-top: 30px;
 }
 .info-buttons {
-    width: 600px;
+    width: 700px;
+    text-align: center;
+}
+
+.info-title {
+    color: #74D14C;
 }
 
 .info-buttons button {
@@ -140,6 +149,7 @@ li {
 .graph-title {
     display: flex;
     justify-content: center;
+    color: #4C96D7;
 }
 
 .tab {
@@ -158,6 +168,7 @@ li {
     padding: 14px 16px;
     color: #f6f5f3;
     transition: 0.3s;
+    font-size: 14px;
 }
 
 .tabcontent {
@@ -168,4 +179,76 @@ li {
     width: 500px;
     height: 400px;
     border-top: none;
+}
+
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background: rgb(0,0,0); 
+    background-color: rgba(0,0,0,0.4);
+}
+
+.modal-content {
+    border-radius: 10px;
+    background-color: #f6f5f3;
+    margin: 10% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    max-width: 600px;
+}
+
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+#modalBtn {
+    padding: 5px;
+    margin: 15px;
+    cursor: pointer;
+    border-radius: 4px;
+    font-size: 15px;
+    color: #f6f5f3;
+    transition: 0.3s;
+}
+
+#modalBtn:focus {
+    outline: none;
+}
+
+.modal-btn-div {
+    text-align: center;
+}
+
+.modal-inst-1, .modal-inst-3 {
+    color: #4C96D7;
+    text-align: center;
+}
+
+.modal-inst-2 {
+    color: #74D14C;
+    text-align: center;
+}
+
+.inst-details > p {
+    font-size: 14px;
+}
+
+.disclaimer {
+    font-size: 12px;
 }
